<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.ChatActivity">
    <item
        android:id="@+id/actionChatMembers"
        android:icon="@mipmap/ic_groupchat"
        android:title="@string/action_chat_members"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionChangeRoomName"
        android:icon="@mipmap/ic_groupchat"
        android:title="@string/action_change_room_name"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionChangeSubject"
        android:icon="@mipmap/ic_groupchat"
        android:title="@string/action_change_room_subject"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionAddToFriends"
        android:title="@string/action_add_to_friends"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionRemoveFromFriends"
        android:title="@string/action_remove_from_friends"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionLeaveChat"
        android:icon="@mipmap/ic_leave_chat"
        android:title="@string/action_leave_chat"
        app:showAsAction="never"/>
    <item
        android:id="@+id/actionDestroyChat"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_destroy_chat"
        app:showAsAction="never"/>
</menu>