<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/green_comment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="inaka.com.gistoid.activities.CreateNewGistActivity"
    tools:showIn="@layout/activity_create_new_gist"
    android:id="@+id/contentCreateNewGistLayout">

    <TextView
        android:id="@+id/textNewGistFile"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/text_file_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textNewGistFileName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_toEndOf="@+id/textNewGistFile"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:background="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/textNewGistPublicOrPrivate"
        android:layout_below="@+id/textNewGistFileName"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_is_public"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkboxNewGistPublicOrPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="5dp"
            android:checked="true"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/textNewGistDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_description"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_below="@id/textNewGistPublicOrPrivate" />

    <EditText
        android:id="@+id/editTextNewGistDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:maxHeight="200dp"
        android:textSize="15sp"
        android:layout_below="@id/textNewGistDescription"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:gravity="top"
        android:padding="5dp"
        android:hint="@string/hint_edit_text" />

</RelativeLayout>
