<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_back_user_profile"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="inaka.com.gistoid.activities.EditUserActivity"
            tools:showIn="@layout/activity_edit_user">

    <RelativeLayout
        android:id="@+id/layoutEditUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:inputType="textPersonName"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textName"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textBlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textEmail"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_blog"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editBlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textUri"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textBlog"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_company"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="text"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textCompany"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_location"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="text"
                android:lines="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textHireable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textLocation"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_hireable"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <CheckBox
                android:id="@+id/checkboxHireable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/textBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textHireable"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_bio"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/editBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/white"
                android:inputType="text"
                android:minHeight="100dp"
                android:padding="5dp"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>

